<resources>
  <string name="about_copyright_notice"
    translation_description="In the 'About My Tracks' page, the copyright notice.

      Screenshot: about.png">
    Copyright 2009 Google Inc.
  </string>
  <string name="about_license"
    translation_description="In the 'About My Tracks' page, the button on the bottom to open the
      'Terms of service' dialog.

      Screenshot: about.png">
    License
  </string>
  <string name="about_privacy"
    translation_description="In the 'About My Tracks' page, label for the privacy link. E.g.,
      'Privacy: m.google.com/privacy'.

      Screenshot: about.png">
    Privacy:
  </string>
  <string name="about_support"
    translation_description="In the 'About My Tracks' page, label for the support link. E.g.,
      'Support: mytracks.appspot.com'.

      Screenshot: about.png">
    Support:
  </string>
  <string name="about_team"
    translation_description="In the 'About My Tracks' page, label for the team members. E.g.,
      'Team: Bart Niechwiej'.

      Screenshot: about.png">
    Team:
  </string>
  <string name="about_version"
    translation_description="In the 'About My Tracks' page, label for the version number. E.g.,
      'Version: 1.1.11'.

      Screenshot: about.png">
    Version:
  </string>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_climbing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for climbing.">
    climbing
  </string>
  <string name="activity_type_commercial_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for commercial airplane.">
    commercial airplane
  </string>
  <string name="activity_type_cross_country_skiing_classic"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing (classic).">
    cross-country skiing (classic)
  </string>
  <string name="activity_type_cross_country_skiing_skate"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing (skate).">
    cross-country skiing (skate)
  </string>
  <string name="activity_type_cycling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cycling.">
    cycling
  </string>
  <string name="activity_type_dirt_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for dirt bike.">
    dirt bike
  </string>
  <string name="activity_type_donkey_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for donkey back riding.">
    donkey back riding
  </string>
  <string name="chart_settings_by_distance"
    translation_description="In the 'Chart settings' dialog, under the 'X axis' section, the radio
      option to show the charts by distance. The other radio option is to show by time. User can
      only choose one of the options.

      Screenshot: chart_settings.png">
    By distance
  </string>
  <string name="chart_settings_by_time"
    translation_description="In the 'Chart settings' dialog, under the 'X axis' section, the radio
      option to show the charts by time. The other radio option is to show by distance. User can
      only choose one of the options.

      Screenshot: chart_settings.png">
    By time
  </string>
  <string name="chart_settings_x_axis"
    translation_description="In the 'Chart settings' dialog, the section label for configuring the X
      axis.

      Screenshot: chart_settings.png">
    X axis
  </string>
  <string name="chart_settings_y_axis"
    translation_description="In the 'Chart settings' dialog, the section label for configuring the Y
      axis.

      Screenshot: chart_settings.png">
    Y axis
  </string>
  <string name="generic_cancel"
    translation_description="The text on a button to say cancel.">
    Cancel
  </string>
  <string name="generic_save"
    translation_description="The text on a button to say save.">
    Save
  </string>
  <string name="menu_aggregated_statistics"
    translation_description="In the menu, to go to the aggregated statistics page.

      Screenshot: menu_record_track_more.png">
    Aggregated statistics
  </string>
  <string name="menu_help"
    translation_description="In the menu, to go to the help page.

      Screenshot: menu_record_track_more.png">
    Help
  </string>
  <string name="menu_markers"
    translation_description="In the menu, to show a list of markers for the current track.

      Screenshot: menu_record_track.png">
    Markers
  </string>
  <string name="menu_record_track"
    translation_description="In the menu, to start recording a track.

      Screenshot: menu_record_track.png">
    Record track
  </string>
  <string name="menu_sensor_state"
    translation_description="In the menu, to go to the sensor state page.

      Screenshot: menu_record_track_more.png">
    Sensor state
  </string>
  <string name="menu_settings"
    translation_description="In the menu, to go to the settings page.

      Screenshot: menu_record_track_more.png">
    Settings
  </string>
  <string name="menu_stop_recording"
    translation_description="In the menu, to stop recording a track.

      Screenshot: menu_stop_recording.png">
    Stop recording
  </string>
  <string name="menu_tracks"
    translation_description="In the menu, to show a list of all the tracks.

      Screenshot: menu_record_track.png">
    Tracks
  </string>
  <string name="send_google_docs"
    translation_description="When sending a track to Google, under the 'Send to...' dialog, the
      checkbox option to send to Google Docs.

      Screenshot: send_google_choose_service.png">
    Google Docs
  </string>
  <string name="send_google_existing_map"
    translation_description="When sending a track to Google Maps, the radio option to use an
      existing map as opposed to create a new map.

      Screenshot: send_google_choose_service.png">
    Use existing map
  </string>
  <string name="send_google_fusion_tables"
    translation_description="When sending a track to Google, under the 'Send to...' dialog, the
      checkbox option to send to Google Fusion Tables.

      Screenshot: send_google_choose_service.png">
    Google Fusion Tables
  </string>
  <string name="send_google_maps"
    translation_description="When sending a track to Google, under the 'Send to...' dialog, the
      checkbox option to send to Google Maps.

      Screenshot: send_google_choose_service.png">
    Google Maps
  </string>
  <string name="sensor_state_cadence"
    translation_description="In the 'Sensor state' page, the label for the cadence on the bike
      sensor. Cadence is the number of revolutions of the crank per minute. E.g.,
      'Cadence: 80 rpm'.

      Screenshot: sensor_state_none.png">
    Cadence
  </string>
  <string name="sensor_state_heart_rate"
    translation_description="In the 'Sensor state' page, the label for the heart rate from a heart
      rate sensor. E.g., 'Hear rate: 100 bpm'.

      Screenshot: sensor_state_none.png">
    Heart rate
  </string>
  <string name="sensor_state_power"
    translation_description="In the 'Sensor state' page, the label for the power from the bike
      sensor. Power is the power output of the rider. E.g., 'Power: 50 W'.

      Screenshot: sensor_state_none.png">
    Power
  </string>
  <string name="stat_elevation"
    translation_description="In the 'Statistics' page, the elevation.

      Screenshot: stat_speed.png">
    Elevation
  </string>
  <string name="stat_elevation_gain"
    translation_description="In the 'Statistics' page, the elevation gain.

      Screenshot: stat_speed.png">
    Elevation gain
  </string>
  <string name="stat_max_elevation"
    translation_description="In the 'Statistics' page, the maximum elevation.

      Screenshot: stat_speed.png">
    Max elevation
  </string>
  <string name="stat_max_grade"
    translation_description="In the 'Statistics' page, the maximum grade.

      Screenshot: stat_speed.png">
    Max grade
  </string>
  <string name="stat_min_elevation"
    translation_description="In the 'Statistics' page, the minimum elevation.

      Screenshot: stat_speed.png">
    Min elevation
  </string>
  <string name="stat_min_grade"
    translation_description="In the 'Statistics' page, the minimum grade.

      Screenshot: stat_speed.png">
    Min grade
  </string>
  <string name="stat_moving_time"
    translation_description="In the 'Statistics' page, the moving time.

      Screenshot: stat_speed.png">
    Moving time
  </string>
  <string name="stat_total_distance"
    translation_description="In the 'Statistics' page, the total distance.

      Screenshot: stat_speed.png">
    Total distance
  </string>
  <string name="stat_total_time"
    translation_description="In the 'Statistics' page, the total time.

      Screenshot: stat_speed.png">
    Total time
  </string>
  <string name="track_detail_activity_type"
    translation_description="In the detail page for a track, the text field for the activity type,
      including for examples.

      Screenshot: track_detail.png">
    Activity type (e.g. hiking, cycling, running...)
  </string>
  <string name="track_detail_activity_type_hint"
    translation_description="In the detail page for a track, the hint in the 'Activity type' text
      field when it is empty.

      Screenshot: track_detail.png">
    Activity type
  </string>
  <string name="track_detail_track_description"
    translation_description="In the detail page for a track, the text field for the track
      description.

      Screenshot: track_detail.png">
    Track description
  </string>
  <string name="track_detail_track_name"
    translation_description="In the detail page for a track, the text field for the track name.

      Screenshot: track_detail.png">
    Track name
  </string>
  <string name="track_icon_description"
    translation_description="The accessibility description for the track icon.">
    Track
  </string>
  <string name="track_list_delete_all"
    translation_description="In the 'Tracks' page, the button on the bottom to delete all tracks.

      Screenshot: track_list.png">
    Delete all
  </string>
  <string name="track_list_export_all"
    translation_description="In the 'Tracks' page, the button on the bottom to export all tracks.

      Screenshot: track_list.png">
    Export all
  </string>
  <string name="track_list_import_all"
    translation_description="In the 'Tracks' page, the button on the bottom to import all tracks.

      Screenshot: track_list.png">
    Import all
  </string>
  <string name="track_list_pick_one"
    translation_description="In the 'Tracks' page, the instruction at the top of the page informing
      the user he can press and hold a track for more options.

      Screenshot: track_list.png">
    Pick a track. Press &amp; hold for more options.
  </string>
</resources>