<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/menu_record_track"
    android:icon="@drawable/ic_menu_recordtrack"
    android:title="@string/menu_record_track"
    android:showAsAction="always"/>

  <item android:id="@+id/menu_stop_recording"
    android:icon="@drawable/ic_menu_stoprecording"
    android:title="@string/menu_stop_recording"
    android:showAsAction="always"/>

  <item android:id="@+id/menu_tracks"
    android:icon="@drawable/ic_menu_tracklist"
    android:title="@string/menu_tracks"
    android:showAsAction="ifRoom"/>

  <item android:id="@+id/menu_markers"
    android:icon="@drawable/ic_menu_waypoints"
    android:title="@string/menu_markers"
    android:showAsAction="ifRoom"/>

  <item android:id="@+id/menu_sensor_state"
    android:icon="@drawable/ic_menu_sensorstatus"
    android:orderInCategory="1000"
    android:title="@string/menu_sensor_state"/>

  <item android:id="@+id/menu_settings"
    android:icon="@android:drawable/ic_menu_preferences"
    android:orderInCategory="1001"
    android:title="@string/menu_settings"/>

  <item android:id="@+id/menu_aggregated_statistics"
    android:orderInCategory="1002"
    android:title="@string/menu_aggregated_statistics"/>

  <item android:id="@+id/menu_help"
    android:icon="@android:drawable/ic_menu_info_details"
    android:orderInCategory="1003"
    android:title="@string/menu_help"/>
</menu>
