<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:orientation="vertical"
  >
  <ScrollView
    android:background="@color/black"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    >
    <LinearLayout 
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:orientation="vertical"
      android:padding="4dp"
      >
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/track_detail_track_name"
        />
      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        >
        <ImageView
          android:contentDescription="@string/track_icon_description"
          android:layout_gravity="center"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:paddingLeft="4dp"
          android:paddingRight="4dp"
          android:src="@drawable/track"
          />
        <EditText
          android:autoText="true"
          android:capitalize="words"
          android:hint="@string/track_detail_track_name"
          android:id="@+id/track_detail_track_name"
          android:imeOptions="actionNext"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:selectAllOnFocus="true"
          android:singleLine="true"
          />
      </LinearLayout>
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/track_detail_activity_type"
        />
      <AutoCompleteTextView
        android:id="@+id/track_detail_activity_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/track_detail_activity_type_hint"
        android:imeOptions="actionNext"/>
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/track_detail_track_description"
        />
      <EditText
        android:autoText="true"
        android:capitalize="sentences"
        android:hint="@string/track_detail_track_description"
        android:id="@+id/track_detail_track_description"
        android:imeOptions="actionDone"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:maxLines="50"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        />
    </LinearLayout>
  </ScrollView>
  <LinearLayout style="@style/ButtonLayout">
    <LinearLayout style="@style/ButtonSpacer"/>
    <Button
      android:id="@+id/track_detail_save"
      android:layout_gravity="left"
      android:text="@string/generic_save"
      style="@style/Button"
      />
    <Button
      android:id="@+id/track_detail_cancel"
      android:layout_gravity="right"
      android:text="@string/generic_cancel"
      style="@style/Button"
      />
    <LinearLayout style="@style/ButtonSpacer"/>
  </LinearLayout>
</LinearLayout>
