<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingTop="10dip"
  android:background="#c000">
  <TextView android:text="@string/track_detail_track_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView android:id="@+id/trackdetails_icon"
      android:src="@drawable/track"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingLeft="4dip"
      android:paddingRight="4dip"/>
    <EditText android:id="@+id/trackdetails_name"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:singleLine="true"
      android:autoText="true"
      android:capitalize="words"
      android:selectAllOnFocus="true"
      android:hint="@string/track_detail_track_name"
      android:imeOptions="actionNext"/>
  </LinearLayout>
  <TextView android:text="@string/track_detail_activity_type"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>
  <AutoCompleteTextView android:id="@+id/trackdetails_category"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:hint="@string/track_detail_activity_type_hint"
    android:imeOptions="actionNext"/>
  <TextView android:text="@string/track_detail_track_description"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>
  <EditText android:id="@+id/trackdetails_description"
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:singleLine="false"
    android:autoText="true"
    android:capitalize="sentences"
    android:selectAllOnFocus="true"
    android:maxLines="50"
    android:gravity="top"
    android:layout_weight="1"
    android:hint="@string/track_detail_track_description"
    android:imeOptions="actionDone"/>
  <LinearLayout style="@style/ButtonLayout">
    <LinearLayout style="@style/ButtonSpacer"/>
    <Button android:id="@+id/trackdetails_save"
      android:layout_gravity="left"
      android:text="@string/generic_save"
      style="@style/Button"/>
    <Button android:id="@+id/trackdetails_cancel"
      android:layout_gravity="right"
      android:text="@string/generic_cancel"
      style="@style/Button"/>
    <LinearLayout style="@style/ButtonSpacer"/>
  </LinearLayout>
</LinearLayout>
