<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent" >
  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >
    <TextView
      android:id="@+id/marker_detail_name"
      style="@style/MarkerDetailLabel" />
    <LinearLayout
      android:id="@+id/marker_detail_waypoint_section"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:orientation="vertical" >
      <TextView
        android:id="@+id/marker_detail_marker_type"
        style="@style/MarkerDetailLabel" />
      <TextView
        android:id="@+id/marker_detail_description"
        style="@style/MarkerDetailLabel" />
    </LinearLayout>
    <TableLayout
      android:id="@+id/marker_detail_statistics_section"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:shrinkColumns="0,2"
      android:stretchColumns="0,2" >
      <!-- Total distance and max speed (fastest pace) -->
      <TableRow>
        <TextView
          android:text="@string/stat_total_distance"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:id="@+id/marker_detail_max_speed_label"
          android:layout_column="2"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_total_distance_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_max_speed_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
      <!-- Total time and average speed (average pace) -->
      <TableRow>
        <TextView
          android:text="@string/stat_total_time"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:id="@+id/marker_detail_average_speed_label"
          android:layout_column="2"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_total_time_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_average_speed_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
      <!-- Moving time and average moving speed (average moving pace) -->
      <TableRow>
        <TextView
          android:text="@string/stat_moving_time"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:id="@+id/marker_detail_average_moving_speed_label"
          android:layout_column="2"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_moving_time_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_average_moving_speed_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
      <!-- Elevation and elevation gain -->
      <TableRow>
        <TextView
          android:text="@string/stat_elevation"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:layout_column="2"
          android:text="@string/stat_elevation_gain"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_elevation_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_elevation_gain_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
      <!-- Min and max elevation -->
      <TableRow>
        <TextView
          android:text="@string/stat_min_elevation"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:layout_column="2"
          android:text="@string/stat_max_elevation"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_min_elevation_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_max_elevation_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
      <!-- Min and max grade -->
      <TableRow>
        <TextView
          android:text="@string/stat_min_grade"
          style="@style/MarkerDetailStatisticsLabel" />
        <TextView
          android:layout_column="2"
          android:text="@string/stat_max_grade"
          style="@style/MarkerDetailStatisticsLabel" />
      </TableRow>
      <TableRow>
        <TextView
          android:id="@+id/marker_detail_min_grade_value"
          style="@style/MarkerDetailStatisticsValue" />
        <TextView style="@style/MarkerDetailStatisticsSpacer" />
        <TextView
          android:id="@+id/marker_detail_max_grade_value"
          style="@style/MarkerDetailStatisticsValue" />
      </TableRow>
    </TableLayout>
  </LinearLayout>
</ScrollView>