<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apl/res/com.google.android.apps.mytracks"
  android:id="@+id/tracklist_root"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_bar"
    android:layout_weight="0"
    android:padding="3dp">
    <TextView android:id="@+id/message"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textSize="16dp"
      android:textColor="#fff"
      android:text="@string/track_list_pick_one"
      android:layout_weight="1"/>
  </LinearLayout>
  <ListView android:id="@android:id/list"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"/>
  <LinearLayout style="@style/ButtonLayout">
    <LinearLayout style="@style/ButtonSpacer"/>
    <Button android:id="@+id/tracklist_btn_import_all"
      android:layout_gravity="left"
      android:text="@string/track_list_import_all"
      style="@style/Button"/>
    <Button android:id="@+id/tracklist_btn_export_all"
      android:layout_gravity="center_horizontal"
      android:text="@string/track_list_export_all"
      style="@style/Button"/>
    <Button android:id="@+id/tracklist_btn_delete_all"
      android:layout_gravity="right"
      android:text="@string/track_list_delete_all"
      style="@style/Button"/>
    <LinearLayout style="@style/ButtonSpacer"/>
  </LinearLayout>
</LinearLayout>
